--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,24 +1,11 @@
-.product{
-    width: 300px;
-    height: 510px;
-    border: 1px solid #95A0A7;
-    border-radius: 8px;
-    position: relative;
-}
-.product img{
-    width: 286px;
-    height: 286px;
-    border-radius: 8px;
-    margin: 7px;
-}
-.product-info{
-    margin: 0 14px;
-}
-.product-info p{
+
+
+.product-info p {
     margin-bottom: 0;
     margin-top: 5px;
 }
-.product-name{
+
+.product-name {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
@@ -26,7 +13,8 @@
     line-height: 25px;
     margin-top: 7px;
 }
-.btn-cart{
+
+.btn-cart {
     width: 100%;
     background: #FFE0B3;
     border: none;
@@ -37,9 +25,20 @@
     align-items: center;
     justify-content: center;
 }
-.btn-cart .btn-text{
+
+.btn-cart .btn-text {
     margin-right: 5px;
 }
-.btn-cart:hover{
+
+.btn-cart:hover {
     background-color: orange;
+}
+
+@media only screen and (max-width: 768px) {
+    .history {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 1em;
+        grid-row-gap: 100px;
+    }
 }
